--- a/src/makefile
+++ b/src/makefile
@@ -96,7 +96,7 @@ endif
 include ${FARGO_OPT_FILE} #The name must not contain digits
 #--------------------FARGO_VARIABLES----------------------------------
 ifndef FARGO_ARCH
-FARGO_ARCH  = LINUX
+FARGO_ARCH  = ${FARGO_ARCH}
 endif
 ifeq (-DGPU,${findstring -DGPU,${FARGO_OPT}})
 	FARGO_GPU   = 1
@@ -205,7 +205,25 @@ LIBS_TESLAOPENMPIK80    = -lm
 ENVRANK_TESLAOPENMPIK80 = OMPI_COMM_WORLD_LOCAL_RANK
 INC_TESLAOPENMPIK80     = 
 NVCC_TESLAOPENMPIK80    = nvcc
-CUDAOPT_TESLAOPENMPIK80 = -O3 -arch=sm_38
+CUDAOPT_TESLAOPENMPIK80 = -O3 -arch=sm_37
+PARAINC_TESLAOPENMPIK80 = 
+PARALIB_TESLAOPENMPIK80 =
+CUDAINC_TESLAOPENMPIK80 = -I${CUDA}/include/
+CUDALIB_TESLAOPENMPIK80 = -L${CUDA}/lib64/  -lcudart
+CXX_TESLAOPENMPIK80     = g++
+CXXPARA_TESLAOPENMPIK80 = mpic++
+#---------------------------------------------------------------------
+#TESLA PLATFORM WITH OPENMPI-1.7.2 AT UNAM
+#FARGO_ARCH must be set to TESLAOPENMPIK80
+CC_TESLAOPENMPIK80      = gcc 
+SEQOPT_TESLAOPENMPIK80  = -O3 -ffast-math
+PARAOPT_TESLAOPENMPIK80 = ${SEQOPT_TESLAOPENMPI}
+PARACC_TESLAOPENMPIK80  = mpicc
+LIBS_TESLAOPENMPIK80    = -lm
+ENVRANK_TESLAOPENMPIK80 = OMPI_COMM_WORLD_LOCAL_RANK
+INC_TESLAOPENMPIK80     = 
+NVCC_TESLAOPENMPIK80    = nvcc
+CUDAOPT_TESLAOPENMPIK80 = -O3 -arch=sm_37
 PARAINC_TESLAOPENMPIK80 = 
 PARALIB_TESLAOPENMPIK80 =
 CUDAINC_TESLAOPENMPIK80 = -I${CUDA}/include/
